--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -50,8 +50,13 @@ dependencies:
   sqflite: ^2.0.3
   path: ^1.8.2
   camera: ^0.10.0+1
+  bulleted_list: 0.0.1+0.1a
+  google_fonts: ^6.2.1
+
+
 
   intl: ^0.17.0 # or the latest version available
+  video_player: ^2.8.6
 
 
 
@@ -79,7 +84,8 @@ flutter:
 
   # To add assets to your application, add an assets section, like this:
   assets:
-    - images/
+    - images/welcome1.mp4
+    
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware
