--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -85,6 +85,7 @@ flutter:
   # To add assets to your application, add an assets section, like this:
   assets:
     - images/welcome1.mp4
+    - images/about.png
     
 
   # An image asset can refer to one or more resolution-specific "variants", see
